fixed warp length calculation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <input type="number" id="warpTakeUp" value="10"/>%
           <br/>
           <label for="loom_waste">Loom waste:</label>
-          <input type="number" id="loom_waste" value="24"/> inches
+          <input type="number" id="loomWaste" value="24"/> inches
           <br/>
           <label for="sampling">Extra warp length for sampling</label>
           <input type="number" id="sampling" value="10"/> inches
