--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
           <input type="button" id="submit" value="Calculate"/>
         </form>
         <h2>Results</h2>
+        Sett: <span id="sett"></span>
+        <br>
         Length of each warp thread: <span id="warpLength"></span> (inches)
         <br>
         Number of warp threads: <span id="warpThreads"></span>
