Calculate yarn needed for warp

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br>
         Number of warp threads: <span id="warpThreads"></span>
         <br>
-        Amount of yarn needed for warp: (yards)
+        Amount of yarn needed for warp: <span id="warpYarn"></span> (yards)
         <br>
         Amount of yarn needed for weft: (yards)
         <br>
