Calculate and display width of warp in reed

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <br>
         Length of each warp thread: <span id="warpLength"></span> (inches)
         <br>
+        Width of warp in reed: <span id="widthInReed"></span> (inches)
+        <br>
         Number of warp threads: <span id="warpThreads"></span>
         <br>
         Amount of yarn needed for warp: <span id="warpYarn"></span> (yards)
